# XOXStocks

./: .env.example  .flaskenv  .gitignore  LICENSE  README.md  config.py  findata.py  populate.py  pyproject.toml  tests.py  xoxstocks.py
app/: __init__.py  api.py  auth.py  cli.py  fill_data.py  forms.py  models.py  routes.py  screener.py  watchlist.py
app/static/: screentable.js  style.css
app/templates/: _formhelpers.html  _pagination.html  _symbol_search.html  _watchlist.html  _watchlist_nav.html  index.html  layout.html  screener.html  user.html  watchlist.html
app/templates/auth/: login.html  register.html
app/templates/screener/: screener.html
app/templates/watchlist/: _watchlist_nav.html  watchlist.html
data/: symbols-dj30.csv  symbols.csv
migrations/versions/: 4f52b126910e_users_table.py  96422a8015f4_watchlists.py  a5e56c9eecd9_symbols.py  be982303e5ec_watchlist_length.py
test/: tests.py
tests/: test_.py  test_main.py  tests.py
xoxstocks/: __init__.py  api.py  auth.py  db.py  models.py  routes.py  schema.sql
xoxstocks/static/: style.css
xoxstocks/templates/: index.html
xoxstocks/templates/auth/: login.html
