[project]
name = "xoxstocks"
version = "2024-10"
description = "A stock screener web app built using Flask"
dependencies = [
    "flask",
    "Flask-WTF",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-login",
    "python-dotenv",
    "email-validator",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"