[project]
requires-python = ">=3.12.3"
name = "xoxstocks"
version = "2024.10"
description = "A stock screener web app built using Flask"
dependencies = [
    "email-validator",
    "flask",
    "flask-login",
    "flask-migrate",
    "Flask-WTF",
    "flask-sqlalchemy",
    "python-dotenv",
    "yfinance",
    ]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
pythonpath = [
    "."
]
testpaths = [
    "tests",
]