[project]
requires-python = ">=3.12.3"
name = "xoxstocks"
version = "2024.10"
description = "A stock screener web app built using Flask"
dependencies = [
    "email-validator",
    "flask",
    "flask-login",
    "flask-migrate",
    "Flask-WTF",
    "flask-sqlalchemy",
    "python-dotenv",
    "yfinance[nospam]",
    ]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-rA -q"
pythonpath = [
    "."
]
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"